@@ -4,17 +4,25 @@
     <controls>
         <control type="group">
             <include>Dialog_Top</include>
-            <include>Dialog_Background_Home</include>
-            <include name="Dialog_Top_IconHeader_Home">
+            <include condition="IsEmpty(Skin.String(SubmenuStyle)) | Skin.String(SubmenuStyle, Large)">Dialog_Background_Home</include>
+            <include condition="Skin.String(SubmenuStyle, Small)">Dialog_Background_Home_Small</include>
+            <include name="Dialog_Top_IconHeader_Home" condition="IsEmpty(Skin.String(SubmenuStyle)) | Skin.String(SubmenuStyle, Large)">
                 <param name="label" value="$LOCALIZE[33060]" />
                 <param name="icon" value="special://skin/extras/icons/power.png" />
             </include>
-            <include name="Dialog_Top_Arrows_Home">
+            <include name="Dialog_Top_IconHeader_Home_Small" condition="Skin.String(SubmenuStyle, Small)">
+                <param name="icon" value="special://skin/extras/icons/power.png" />
+            </include>
+            <include name="Dialog_Top_Arrows_Home" condition="IsEmpty(Skin.String(SubmenuStyle)) | Skin.String(SubmenuStyle, Large)">
                 <param name="id" value="9000" />
             </include>
+            <include name="Dialog_Top_Arrows_Home_Small" condition="Skin.String(SubmenuStyle, Small)">
+                <param name="id" value="9000" />
+            </include>   
 
             <control type="list" id="9000">
-                <include>Dialog_Top_PowerMenu</include>
+                <include condition="IsEmpty(Skin.String(SubmenuStyle)) | Skin.String(SubmenuStyle, Large)">Dialog_Top_PowerMenu</include>
+                <include condition="Skin.String(SubmenuStyle, Small)">Dialog_Top_PowerMenu_Small</include>
                 <content><include>skinshortcuts-group-powermenu</include></content>
             </control>
 
